fix home page text, modals not showing and update media and news pages styles

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -46,6 +46,18 @@ body {
 
 .details-section {
   display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  /* Allow wrapping for smaller screens */
+  justify-content: space-around;
+  align-items: center;
+  gap: 20px;
+  margin: 50px auto;
+  padding: 0 20px;
+}
+
+.music-section {
+  display: flex;
   flex-wrap: wrap;
   /* Allow wrapping for smaller screens */
   justify-content: space-around;
