--- a/src/components/Media/Media.css
+++ b/src/components/Media/Media.css
@@ -23,12 +23,18 @@ body {
   flex-grow: 1;
   padding: 2rem;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   /* Center-align everything */
 }
 
 .blog-header {
   background-color: rgba(26, 26, 26, 0.7);
   transition: transform 0.3s ease-in-out;
+  padding: 10px 20px;
+  max-width: 400px;
+  margin-bottom: 20px;
 }
 
 .blog-header h1 {
@@ -64,6 +70,7 @@ body {
   border-radius: 4px;
   text-align: left;
   transition: transform 0.3s ease-in-out;
+  cursor: pointer;
 }
 
 .post-card:hover {
